Contrast error fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,7 +37,7 @@ li {
 }
 
 .call_To_Action_section .button {
-  background-color: #01B0D3;
+  background-color: #244247;
   /* display: block; 
   margin: 0 auto; */
 
